@@ -5,7 +5,7 @@
 ## Made by  Bruno JOFRET <bruno.jofret@inria.fr>
 ##
 ## Started on  Thu Nov 30 16:33:40 2006 jofret
-## Last update Wed Feb 14 18:00:48 2007 jofret
+## Last update Thu Feb 15 17:16:42 2007 jofret
 ##
 ## Copyright INRIA 2006
 ##
@@ -22,8 +22,8 @@ LIBS	=	-lm \
 		-lTan -lTanh \
 		-lSign \
 		-lExp \
-		-lFind \
-		-lIsEmpty
+		-lIsEmpty \
+		-lFind
 
 CFLAGS	=	-Werror -Wall -ansi $(INCLUDE)
 CLFLAGS	=	$(LINK) $(LIBS)
