@@ -1,3 +1,10 @@
+2007-02-15  Bruno JOFRET  <bruno.jofret@inria.fr>
+
+	* src/test/testIsEmpty.c :
+	Add some tests.
+	* src/test/Makefile :
+	Some trouble with link... Better in this order !
+
 2007-02-14  Bruno JOFRET  <bruno.jofret@inria.fr>
 
 	* src/test/test*.c :
